# solarxy

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  dist-workspace.toml  index.html  rustfmt.toml
.cargo/: config.toml
.github/actions/native-bundle/: README.md  action.yml
.github/workflows/: ci.yml  flathub-bump.yml  homebrew-bump.yml  native-bundle.yml  release.yml  winget-release.yml
crates/solarxy-app/: Cargo.toml
crates/solarxy-app/src/: aabb.rs  app.rs  console.rs  lib.rs  preferences.rs
crates/solarxy-app/src/gui/: about.rs  actions.rs  console_view.rs  keyboard_shortcuts_modal.rs  menu.rs  mod.rs  overlays.rs  preferences_modal.rs  renderer.rs  sidebar.rs  snapshot.rs  stats.rs  theme.rs  update_modal.rs
crates/solarxy-app/src/state/: capture.rs  init.rs  mod.rs  overlap.rs  panes.rs  render.rs  update.rs  view_state.rs
crates/solarxy-app/src/state/input/: dialogs.rs  menu_actions.rs  mod.rs
crates/solarxy-cli/: Cargo.toml  README.md
crates/solarxy-cli/content/: analyze_mode.txt  formats.txt  preferences.txt  view_mode.txt
crates/solarxy-cli/src/: help.rs  lib.rs  parser.rs  tui.rs  tui_analysis.rs  tui_docs.rs  tui_preferences.rs  validators.rs
crates/solarxy-cli/src/calc/: analyze.rs  geometry.rs  mod.rs
crates/solarxy-cli/wix/: main.wxs
crates/solarxy-core/: Cargo.toml  README.md
crates/solarxy-core/src/: aabb.rs  geometry.rs  install_source.rs  json.rs  lib.rs  preferences.rs  report.rs  validation.rs  view_config.rs
crates/solarxy-formats/: Cargo.toml  README.md
crates/solarxy-formats/src/: gltf.rs  lib.rs  obj.rs  ply.rs  stl.rs
crates/solarxy-formats/tests/: loaders.rs
crates/solarxy-formats/tests/fixtures/: triangle.glb  triangle.glb.gen.py
crates/solarxy-renderer/: Cargo.toml
crates/solarxy-renderer/src/: bind_groups.rs  bloom.rs  camera.rs  camera_state.rs  composite.rs  error.rs  frame.rs  geometry.rs  ibl.rs  lib.rs  light.rs  material.rs  model.rs  pipeline_builder.rs  pipelines.rs  resources.rs  scene.rs  shadow.rs  ssao.rs  texture.rs  uv_camera.rs  validation.rs  visualization.rs
crates/solarxy-renderer/src/shaders/: background.wgsl  composite.wgsl  floor.wgsl  gbuffer.wgsl  ghosted.wgsl  gizmo.wgsl  normals.wgsl  shader.wgsl  shadow.wgsl  ssao.wgsl  ssao_blur.wgsl
crates/solarxy-renderer/tests/: headless_smoke.rs
docs/: SolarxyDocumentation.md
docs/changelog/: CHANGELOG.md
docs/perf/: rc11-baseline.md  rc11-profiling-notes.md
packaging/flatpak/: README.md  cargo-sources.json  dev.koljam.solarxy.desktop  dev.koljam.solarxy.metainfo.xml  dev.koljam.solarxy.yaml  generate-sources.sh
packaging/homebrew/: README.md
packaging/homebrew/Casks/: solarxy.rb
packaging/homebrew/Formula/: solarxy-cli.rb
packaging/winget/: Koljam.Solarxy.installer.yaml  Koljam.Solarxy.locale.en-US.yaml  Koljam.Solarxy.yaml  README.md
res/bundle/: solarxy.icns
res/bundle/linux/: solarxy.desktop
res/bundle/linux/appimage/: AppRun
res/bundle/macos/: Install CLI.command  READ ME FIRST.txt  README.txt
res/models/frog/: ooz3d-export-material-20260329-181053.mtl
scripts/: build_local_dmg.sh  gen_bundle_icons.sh  gen_placeholder_icons.sh
src/: aabb.rs  app.rs  camera.rs  console.rs  lib.rs  light.rs  main.rs  material.rs  model.rs  preferences.rs  resources.rs  shader.wgsl  state.rs  texture.rs  validation.rs
src/calc/: analyize.rs  analyze.rs  geometry.rs  json.rs  mod.rs  report.rs
src/cgi/: bind_groups.rs  camera.rs  camera_state.rs  composite.rs  geometry.rs  gui.rs  hud.rs  ibl.rs  light.rs  loader_gltf.rs  loader_obj.rs  loader_ply.rs  loader_stl.rs  material.rs  mod.rs  model.rs  pipeline_builder.rs  pipelines.rs  resources.rs  shadow.rs  ssao.rs  texture.rs  visualization.rs
src/cgi/gui/: about.rs  actions.rs  menu.rs  mod.rs  overlays.rs  renderer.rs  sidebar.rs  stats.rs  update_modal.rs
src/cgi/shaders/: background.wgsl  bloom.wgsl  composite.wgsl  edge_wire.wgsl  floor.wgsl  gbuffer.wgsl  ghosted.wgsl  gizmo.wgsl  grid.wgsl  light.wgsl  normals.wgsl  shader.wgsl  shadow.wgsl  ssao.wgsl  ssao_blur.wgsl  uv_debug.wgsl  uv_map.wgsl  uv_overlap.wgsl  validation.wgsl
src/cli/: help.rs  mod.rs  parser.rs  tui.rs  tui_analysis.rs  tui_docs.rs  tui_preferences.rs  validators.rs
src/shaders/: light.wgsl  shader.wgsl
src/state/: capture.rs  init.rs  input.rs  mod.rs  render.rs  renderer.rs  update.rs  view_state.rs
tests/: loaders.rs
web/: index.html  package-lock.json  package.json
web/src/: main.ts  style.css
wix/: main.wxs
