[workspace]
members = [
    ".",
    "crates/solarxy-core",
    "crates/solarxy-formats",
    "crates/solarxy-cli",
]
resolver = "2"

[workspace.package]
version = "0.5.0-rc.6"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/marko-koljancic/solarxy"
authors = ["Marko Koljancic <marko.koljancic@gmail.com>"]

[workspace.dependencies]
cgmath = "0.18"
anyhow = "1.0.100"

[package]
name = "solarxy"
description = "A lightweight, cross-platform, high-performance computer graphics 3D model viewer and validator built with Rust and wgpu. Inspect 3D models in a real-time graphical viewer or analyze them from the terminal with built-in validation checks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.dist]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[[bin]]
name = "solarxy"
path = "src/main.rs"

[features]
default = ["viewer", "analyzer"]
viewer = [
    "analyzer",
    "dep:wgpu",
    "dep:winit",
    "dep:egui",
    "dep:egui-wgpu",
    "dep:egui-winit",
    "dep:pollster",
    "dep:image",
    "dep:bytemuck",
    "dep:half",
    "dep:exr",
    "dep:rfd",
    "dep:open",
    "dep:time",
]
analyzer = ["dep:solarxy-formats"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
anyhow = { workspace = true }
cgmath = { workspace = true }
solarxy-core = { path = "crates/solarxy-core" }
solarxy-formats = { path = "crates/solarxy-formats", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }

winit = { version = "0.30.12", optional = true }
wgpu = { version = "27.0.1", optional = true }
pollster = { version = "0.4.0", optional = true }
bytemuck = { version = "1.24", features = ["derive"], optional = true }
egui = { version = "0.33", optional = true }
egui-wgpu = { version = "0.33", optional = true }
egui-winit = { version = "0.33", optional = true }
half = { version = "2.0", optional = true }
exr = { version = "1.0", optional = true }
rfd = { version = "0.15", optional = true }
open = { version = "5", optional = true }
time = { version = "0.3", features = ["local-offset", "formatting", "macros"], optional = true }


[dependencies.image]
version = "0.25.9"
default-features = false
features = ["png", "jpeg", "webp", "hdr"]
optional = true

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

# ---- Native installer metadata -------------------------------------------
# `cargo-bundle` consumes [package.metadata.bundle] for macOS .app staging
# (the actual .app + .dmg is hand-rolled in
# .github/actions/native-bundle/action.yml). MSI metadata is in
# [package.metadata.wix]. Linux GUI is shipped via Flathub (manifest under
# packaging/flatpak/) and AppImage (built in native-bundle action). The
# .deb and .rpm formats were dropped in v0.5.0-rc.7 — Flatpak handles the
# Vulkan-driver problem that those formats leaked to the host system.

[package.metadata.bundle]
name = "Solarxy"
identifier = "dev.koljam.solarxy"
icon = [
    "res/bundle/solarxy-256.png",
    "res/bundle/solarxy-512.png",
    "res/bundle/solarxy-1024.png",
]
copyright = "Copyright © 2026 Marko Koljancic"
category = "public.app-category.developer-tools"
short_description = "3D model viewer and validator"
long_description = """
Cross-platform 3D model viewer and validator built with Rust and wgpu. \
Supports OBJ, STL, PLY, and glTF formats with real-time PBR rendering, \
inspection modes, validation checks, and a TUI-based analyzer."""
osx_minimum_system_version = "11.0"

[package.metadata.wix]
upgrade-guid = "F201EA19-A29E-4B9E-A3CE-85CEB9BAF9CE"
path-guid = "4D645CA7-A471-43A2-9F97-B55DAA382886"
license = false
eula = false
