[workspace]
members = [
    ".",
    "crates/solarxy-core",
    "crates/solarxy-formats",
    "crates/solarxy-renderer",
    "crates/solarxy-app",
    "crates/solarxy-cli",
]
resolver = "2"

[workspace.package]
version = "0.5.0-rc.9"
edition = "2024"
rust-version = "1.92"
license = "MIT"
repository = "https://github.com/marko-koljancic/solarxy"
authors = ["Marko Koljancic <marko.koljancic@gmail.com>"]

[workspace.dependencies]
cgmath    = "0.18"
anyhow    = "1.0.100"
thiserror = "2"

[workspace.lints]
# (placeholder for future workspace-wide lint config)

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

[profile.dist]
inherits      = "release"
lto           = "fat"
codegen-units = 1
strip         = "symbols"
panic         = "abort"

# ---- Root binary ---------------------------------------------------------
# This crate is bin-only after the v0.6.0 workspace split. Feature-gated
# build matrix is gone; the GUI is always linked. CLI lives in
# crates/solarxy-cli with its own [[bin]] target.

[package]
name = "solarxy"
description = "A lightweight, cross-platform, high-performance computer graphics 3D model viewer and validator built with Rust and wgpu. Inspect 3D models in a real-time graphical viewer or analyze them from the terminal with built-in validation checks."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "solarxy"
path = "src/main.rs"

[dependencies]
solarxy-core = { path = "crates/solarxy-core" }
solarxy-app  = { path = "crates/solarxy-app" }
clap         = { version = "4.5.53", features = ["derive"] }
anyhow       = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
time         = { version = "0.3", features = ["local-offset", "formatting", "macros"] }

# ---- Native installer metadata -------------------------------------------
# `cargo-bundle` consumes [package.metadata.bundle] for macOS .app staging
# (the actual .app + .dmg is hand-rolled in
# .github/actions/native-bundle/action.yml). MSI metadata is in
# [package.metadata.wix]. Linux GUI is shipped via Flathub (manifest under
# packaging/flatpak/) and AppImage (built in native-bundle action).

[package.metadata.bundle]
name = "Solarxy"
identifier = "dev.koljam.solarxy"
icon = [
    "res/bundle/solarxy-256.png",
    "res/bundle/solarxy-512.png",
    "res/bundle/solarxy-1024.png",
]
copyright = "Copyright © 2026 Marko Koljancic"
category = "public.app-category.developer-tools"
short_description = "3D model viewer and validator"
long_description = """
Cross-platform 3D model viewer and validator built with Rust and wgpu. \
Supports OBJ, STL, PLY, and glTF formats with real-time PBR rendering, \
inspection modes, validation checks, and a TUI-based analyzer."""
osx_minimum_system_version = "11.0"

[package.metadata.wix]
upgrade-guid = "F201EA19-A29E-4B9E-A3CE-85CEB9BAF9CE"
path-guid = "4D645CA7-A471-43A2-9F97-B55DAA382886"
license = false
eula = false
