[package]
name = "solarxy-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI parsing and TUI interfaces for Solarxy"

[[bin]]
name = "solarxy-cli"
path = "src/bin/solarxy-cli.rs"
required-features = ["tui"]

[features]
default = ["tui", "analyzer", "updater"]
tui = ["dep:ratatui", "dep:crossterm"]
analyzer = ["dep:solarxy-formats"]
updater = ["dep:axoupdater"]

[dependencies]
solarxy-core = { path = "../solarxy-core" }
solarxy-formats = { path = "../solarxy-formats", optional = true }
cgmath = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
anyhow = { workspace = true }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.28.1", optional = true }
axoupdater = { version = "0.10", features = ["blocking"], optional = true }

# ---- Native installer metadata (Windows MSI) -----------------------------
# Stable GUIDs for the CLI MSI produced by cargo-dist via cargo-wix.
# `upgrade-guid` is the durable identifier Windows uses to recognise a new
# MSI as an upgrade of an existing install — it MUST NOT change across
# versions. `path-guid` is the stable component GUID for the PATH entry
# added by the MSI. Both must differ from the GUI MSI's GUIDs (in the root
# Cargo.toml) to avoid upgrade-collision.
#
# Known gap (deferred to 0.5.1): this MSI has no install-source marker
# equivalent to wix/install-source-msi.txt, so `solarxy-cli --update`
# cannot detect an MSI-installed CLI and route users to `winget upgrade`.
# It will fall through to axoupdater or Unknown. To fix, add a dedicated
# crates/solarxy-cli/wix/main.wxs that writes
# %CommonAppDataFolder%\Solarxy-cli\install-source (contents: "msi").

[package.metadata.wix]
upgrade-guid = "288588D5-0A49-46D6-8222-DCD7CEEBC39A"
path-guid    = "CFFD83AC-37C5-4530-BA68-58EC0D2CAA75"
license = false
eula    = false
