[package]
name = "solarxy-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI parsing and TUI interfaces for Solarxy"

[[bin]]
name = "solarxy-cli"
path = "src/bin/solarxy-cli.rs"
required-features = ["tui"]

[features]
default = ["tui", "analyzer", "updater"]
tui = ["dep:ratatui", "dep:crossterm"]
analyzer = ["dep:solarxy-formats"]
updater = ["dep:axoupdater"]

[dependencies]
solarxy-core = { path = "../solarxy-core" }
solarxy-formats = { path = "../solarxy-formats", optional = true }
cgmath = { workspace = true }
clap = { version = "4.5.53", features = ["derive"] }
anyhow = { workspace = true }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "6.0"
ratatui = { version = "0.29.0", optional = true }
crossterm = { version = "0.28.1", optional = true }
axoupdater = { version = "0.10", features = ["blocking"], optional = true }

# ---- cargo-dist per-package overrides ------------------------------------
# The workspace's dist-workspace.toml sets `installers = ["shell",
# "powershell", "msi"]` for everything. CLI MSIs are not idiomatic on
# Windows (ripgrep, fd, zoxide, eza, bat, delta, cargo-dist itself don't
# ship one), so we override per-crate to skip msi for this binary. Users
# install the CLI via the shell / PowerShell installer (or a portable
# winget manifest — deferred to 0.5.1).
[package.metadata.dist]
installers = ["shell", "powershell"]
