[package]
name = "solarxy-formats"
version = "0.4.2"
edition = "2024"
rust-version = "1.92"
license = "MIT"
description = "3D model format loaders (OBJ, STL, PLY, glTF) for Solarxy"

[dependencies]
solarxy-core = { path = "../solarxy-core" }
anyhow = { workspace = true }
cgmath = { workspace = true }
tobj = { version = "4.0.3", default-features = false }
stl_io = "0.7"
ply-rs-bw = "3.0.3"
gltf = "1.4"
tracing = "0.1"
