[package]
name = "solarxy-renderer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "wgpu-based PBR renderer for Solarxy"

[dependencies]
solarxy-core    = { path = "../solarxy-core" }
solarxy-formats = { path = "../solarxy-formats" }
wgpu        = "27.0.1"
winit       = "0.30.12"
cgmath      = { workspace = true }
bytemuck    = { version = "1.24", features = ["derive"] }
half        = "2.0"
exr         = "1.0"
tracing     = "0.1"
anyhow      = { workspace = true }

[dev-dependencies]
pollster = "0.4.0"

[dependencies.image]
version          = "0.25.9"
default-features = false
features         = ["png", "jpeg", "webp", "hdr"]
